--- a/package.json
+++ b/package.json
@@ -12,58 +12,26 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@hookform/resolvers": "^4.1.2",
-    "@internationalized/date": "^3.7.0",
-    "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
-    "@radix-ui/react-aspect-ratio": "^1.1.3",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-checkbox": "^1.1.5",
-    "@radix-ui/react-collapsible": "^1.1.4",
-    "@radix-ui/react-context-menu": "^2.2.7",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-form": "^0.1.3",
-    "@radix-ui/react-hover-card": "^1.1.7",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-menubar": "^1.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.6",
     "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "^2.1.7",
-    "@radix-ui/react-separator": "^1.1.3",
-    "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-toast": "^1.2.7",
-    "@radix-ui/react-toggle": "^1.1.3",
-    "@radix-ui/react-toggle-group": "^1.1.3",
-    "@radix-ui/react-toolbar": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.72.2",
     "@types/node": "^22.14.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
     "lucide-react": "^0.487.0",
     "raviger": "^5.0.0-2",
-    "react-day-picker": "^9.6.5",
-    "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.1",
-    "react-markdown": "^10.1.0",
-    "recharts": "^2.15.1",
-    "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1",
-    "sonner": "^2.0.3",
+    "recharts": "^2.15.2",
     "tailwind-merge": "^3.2.0",
-    "use-keyboard-shortcut": "^1.1.6",
-    "zod": "^3.24.2"
+    "use-keyboard-shortcut": "^1.1.6"
   },
   "peerDependencies": {
     "react": "^18.3.1",
