--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.4.0",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
