--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.2",
     "@types/node": "^22.14.0",
     "class-variance-authority": "^0.7.1",
@@ -40,7 +41,6 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.4.0",
-    "@tailwindcss/postcss": "^4.1.3",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
@@ -48,7 +48,6 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.3",
-    "tw-animate-css": "^1.2.5",
     "typescript": "^5.8.3",
     "vite": "^6.2.6"
   }
