--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^22.14.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jotai": "^2.12.3",
     "lucide-react": "^0.487.0",
     "raviger": "^5.0.0-2",
     "react-i18next": "^15.4.1",
