fix cors headers in nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,11 +15,13 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    add_header Access-Control-Allow-Origin "*" always;
 
     # Handle module federation remoteEntry.js specifically (must come first, more specific)
     location ~* remoteEntry\.js$ {
         add_header Content-Type "application/javascript" always;
         add_header Cache-Control "public, max-age=31536000, immutable";
+        add_header Access-Control-Allow-Origin "*" always;
         expires 1y;
         access_log off;
     }
@@ -27,15 +29,17 @@ server {
     # Handle JavaScript modules (ESM) with proper MIME type
     location ~* \.js$ {
         add_header Content-Type "application/javascript" always;
-        expires 1y;
         add_header Cache-Control "public, immutable";
+        add_header Access-Control-Allow-Origin "*" always;
+        expires 1y;
         access_log off;
     }
 
     # Cache other static assets (non-JS)
     location ~* \.(css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
         add_header Cache-Control "public, immutable";
+        add_header Access-Control-Allow-Origin "*" always;
+        expires 1y;
         access_log off;
     }
 
@@ -44,6 +48,7 @@ server {
         add_header Cache-Control "no-cache, no-store, must-revalidate";
         add_header Pragma "no-cache";
         add_header Expires "0";
+        add_header Access-Control-Allow-Origin "*" always;
     }
 
     # Serve index.html for root and SPA routing
@@ -54,8 +59,9 @@ server {
     # Health check endpoint
     location /health {
         access_log off;
-        return 200 "healthy\n";
         add_header Content-Type text/plain;
+        add_header Access-Control-Allow-Origin "*" always;
+        return 200 "healthy\n";
     }
 }
 
