added sonner package

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "raviger": "^5.0.0-2",
     "react-i18next": "^15.4.1",
     "recharts": "^2.15.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "use-keyboard-shortcut": "^1.1.6"
   },
@@ -50,7 +51,6 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.4.0",
-    "@rollup/rollup-darwin-arm64": "^4.53.3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
@@ -76,6 +76,12 @@
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.4"
+  },
+  "optionalDependencies": {
+    "@esbuild/linux-arm64": "latest",
+    "@esbuild/linux-x64": "latest",
+    "@rollup/rollup-linux-arm64-gnu": "4.53.3",
+    "@rollup/rollup-linux-x64-gnu": "4.53.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
